<resources>
    <string name="app_name">JuniorDesignApp</string>
    <string name="junior_design_app_alpha_0_1">Junior Design App: Alpha 0.1</string>
    <string name="developed_by_caden_krohn">Developed by: Caden Krohn</string>
    <string name="help">help</string>
    <string name="settings">settings</string>
    <string name="locate">locate</string>
    <string name="devices">devices</string>
    <string name="title_activity_settings_page">settings_page</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="bluetooth_frisbee_tracker">Bluetooth Frisbee Tracker</string>
    <string name="about">About</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
</resources>